fixed scrolling issue on mobile

--- a/_sass/blog/_code.scss
+++ b/_sass/blog/_code.scss
@@ -24,6 +24,7 @@ p > code {
 }
 
 .highlight {
+  overflow: auto;
   padding: 10px;
   background: $_background;
   color: $_foreground;
